hphp/hack/test/typecheck/as_expression/invalid_hint_void.php.exp
File "invalid_hint_void.php", line 5, characters 3-13:
  err
File "invalid_hint_void.php", line 4, characters 9-12:
The void typehint can only be used to describe a function return type (Naming[2063])
